# po-creation-form

./: .dockerignore  .gitignore  .npmrc  Cargo.toml  PO Template V1.xlsx  README.MD  build.bat  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  po_tracker_dashboard.service  publish.ps1  publish_web.ps1  tailwind.config.js
.bruno/: Health.yml  opencollection.yml
.bruno/Authentication/: Get Current User.yml  Login.yml
.bruno/Data/: Get Category.yml
.bruno/Purchase Orders/: Create Purchase Order.yml  Delete File.yml  Delete Purchase Order.yml  Download File.yml  Get All Purchase Orders.yml  Get Purchase Order.yml  List Files.yml  Process Manifest File.yml  Update Purchase Order.yml  Upload File.yml  folder.yml
.bruno/Vendors/: Create Vendor.yml  Delete Vendor.yml  Get All Vendors.yml  Get Vendor.yml  Update Vendor.yml  folder.yml
.cargo/: config.toml
.github/workflows/: release.yml
crates/app/: Application Icon.psd  LICENSE  index.html  package.json  tailwind.config.js  tsconfig.json
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/save_file/: mod.rs
crates/web/: .npmrc  Cargo.toml  index.html  package.json  tailwind.config.js  vite.config.ts
crates/web/.bruno/: opencollection.yml
crates/web/.bruno/Authentication/: Confirm Email.yml  Get Users.yml  Register User.yml
crates/web/.bruno/Data/: Get Departments.yml  Get SubCategory.yml  folder.yml
crates/web/sql/: categories.sql  data.sql  department-category.md  departments.sql  seasons.sql  seasons_seed.sql  subcategories.sql  subcategories_seed.sql  users.sql
crates/web/src/: ErrorBoundry.tsx  main.tsx
crates/web/src-actix/: app_db.rs  build.rs  lib.rs  main.rs
crates/web/src-actix/auth/: auth_endpoint.rs  auth_endpoint_data.rs  email_service.rs  jwt_data.rs  mod.rs  registration_db.rs  user_role.rs  users_data.rs  users_db.rs
crates/web/src-actix/data/: data_db.rs  data_endpoint.rs
crates/web/src-actix/util/: mod.rs
crates/web/src/assets/css/: index.css
crates/web/src/components/: TopNavigation.tsx
crates/web/src/fonts/: eds-market-narrow-slant.css
crates/web/src/pages/: ConfirmEmail.tsx  Register.tsx
crates/web/src/pages/protected/: Dashboard.tsx
crates/web/src/providers/: AuthenticationProvider.tsx  ThemeProvider.tsx
examples/: PO Template V1 (modified).xlsx  po_manifest_template_parser.rs
sql/: categories_seed.sql  departments_seed.sql  password_reset_requests.sql  po_files.sql  po_line_items.sql  purchase_orders.sql  registration_requests.sql  users.sql  vendor_contacts.sql  vendor_ship_locations.sql  vendors.sql
src/: main.tsx
src-actix/: app_db.rs  lib.rs  status_endpoint.rs
src-actix/auth/: auth_endpoint.rs  auth_endpoint_data.rs  auth_middleware.rs  auth_service.rs  email_service.rs  mod.rs  password_reset_db.rs  registration_db.rs  users_data.rs  users_db.rs
src-actix/data/: data_db.rs  mod.rs
src-actix/events/: broadcaster.rs  events_endpoint.rs  mod.rs
src-actix/purchase_orders/: fob_type.rs  manifest_parser.rs  mod.rs  po_status.rs  purchase_order_response.rs  purchase_orders_data.rs  purchase_orders_db.rs  purchase_orders_endpoint.rs  upload_file_type.rs
src-actix/util/: asset_endpoint.rs  mod.rs
src-actix/vendors/: mod.rs  vendors_data.rs  vendors_db.rs  vendors_endpoint.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/permissions/manifest-parser/: default.toml
src-tauri/permissions/save_system/: default.toml
src-tauri/src/: lib.rs  main.rs  save_system.rs
src-tauri/src/manifest_parser/: commands.rs  mod.rs  parser.rs
src-tauri/src/save_system/: mod.rs
src/components/: InfoCard.tsx  MFAQRCode.tsx  ModalSection.tsx  ProtectedRoute.tsx  RequireRole.tsx  Sidebar.tsx  SidebarNavigation.tsx  Titlebar.tsx  TopNavigation.tsx  UpdateModal.tsx
src/css/: index.css
src/data/: mock-pos.ts  mock-vendors.ts
src/fonts/: dunbar-low.css  dunbar-tall.css  dunbar-text.css  eds-market-narrow-slant.css
src/hooks/: usePOFilters.ts  usePurchaseOrders.ts  useRealtimeUpdates.ts  useTauriDragDropZone.ts  useUserFilters.ts  (+3 more)
templates/: confirm_email_template.html.tera  reset_password_template.html.tera  vendor_created_template.html.tera
(+120 files in other folders)
