[package]
name = "po_tracker_share_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = {version = "1.0.149"}
chrono = {version = "0.4.43", features = ["serde"]}
sevenz-rust2 = {version = "0.20.0", features = ["zstd"] }
anyhow = {version = "1.0.100"}
uuid = { version = "1", features = ["v4"] }
log = "0.4.29"
tokio = { version = "1", features = ["rt", "sync"] }