[package]
name = "po_tracker_dashboard"
version = "0.0.0"
edition = "2024"
authors = ["Drew Chase (Work) <dcmanproductions@gmail.com>"]
build = "src-actix/build.rs"

[[bin]]
name = "po_tracker_dashboard"
path = "src-actix/main.rs"

[lib]
name = "po_tracker_dashboard_lib"
path = "src-actix/lib.rs"
crate-type = ["lib"]

[dependencies]
actix-web = { version = ">=4.9.0" }
actix-cors = { version = ">=0.7.0" }
actix-files = { version = ">=0.6.6" }
futures-util = ">=0.3.30"
serde = { version = ">=1.0.208", features = ["derive"] }
serde_json = { version = ">=1.0.125" }
pretty_env_logger = ">=0.5.0"
include_dir = ">=0.7.4"
walkdir = ">=2.5.0"
awc = ">=3.1.0"
log = ">=0.4.22"
anyhow = ">=1.0.95"
thiserror = ">=2.0.11"
vite-actix = ">=0.2.5"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
chrono = { version = "0.4.43", features = ["now", "serde"] }
sqlx = { version = "0.8.6", features = ["json", "macros", "mysql", "runtime-tokio", "chrono"] }
bcrypt = { version = "0.18.0" }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
actix-web-httpauth = { version = "0.8.2" }
lettre = { version = "0.11.19", default-features = false, features = ["tokio1-native-tls", "smtp-transport", "builder"] }
tera = { version = "1.20.1" }
uuid = {version = "1.19.0", features = ["v4"]}
obsidian-scheduler = {version = "0.1.0", features = ["tokio", "callback-timers", "log"]}

[build-dependencies]
include_dir = "0.7.4"
walkdir = "2.5.0"
